--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 
+import Analytics from '@vercel/analytics/astro';
 import { ClientRouter } from "astro:transitions";
 import MainHeader from "../components/MainHeader.astro";
 import '../styles/global.css';
@@ -12,6 +13,8 @@ import '../styles/global.css';
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <title>The Wilderness Trails</title>
+    <!-- @ts-ignore -->
+    <Analytics />
     <ClientRouter />
 </head>
 
