--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,6 @@ import '../styles/global.css';
 
 import HomePageBG from "../images/homepage-bg.jpg";
 
-Astro.response.headers.set(
-  'CDN-Cache-Control', 
-  'public, s-maxage=10, stale-while-revalidate=59'
-);
-
 export const prerender = true;
 
 ---
@@ -22,6 +17,9 @@ export const prerender = true;
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Inconsolata:wdth,wght@150,200..900&family=Inter:opsz,wght@14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>The Wilderness Trails</title>
     <!-- @ts-ignore -->
     <Analytics />
