--- a/src/components/CommentForm.astro
+++ b/src/components/CommentForm.astro
@@ -47,9 +47,10 @@
         }
 
         input, textarea {
-            padding: 0.25rem 0.75rem;
             font-size: 1.1rem;
             color: var(--clr-font);
+            padding: 0.25rem 0.75rem;
+            width: 100%;
             border: none;
             border-radius: 0.25rem;
             background: var(--clr-primary);
