Added minor accessibility changes

--- a/src/components/CommentForm.astro
+++ b/src/components/CommentForm.astro
@@ -82,7 +82,7 @@
         background: var(--clr-accent-1);
         transition: opacity 0.2s ease;
 
-        &:hover {
+        &:is(:hover, :focus) {
             opacity: 0.6;
         }
     }
