--- a/src/components/HeaderContent.astro
+++ b/src/components/HeaderContent.astro
@@ -10,7 +10,13 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
 
 <a href="/" class="logo">The Other Side</a>
 
-<nav class="article-nav" aria-label="Article navigation">
+<button class="hamburger-btn" aria-label="Article Navigation Toggle Buttton" aria-controls="article-nav">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
+        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+    </svg>
+</button>
+
+<nav class="article-nav" id="article-nav">
     <ul class="flow">
         {uniqueCategories.map((category) => (
             <li>
@@ -19,12 +25,6 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
         ))}
     </ul>
 </nav>
-
-<button class="hamburger-btn">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
-        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
-    </svg>
-</button>
 
 <style>
 
@@ -38,7 +38,7 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
     color: var(--clr-tertiary);
     transition: color 0.3s ease;
 
-    &:hover {color: var(--clr-accent-1);}
+    &:is(:hover, :focus) {color: var(--clr-accent-1);}
 }
 
 .hamburger-btn {
@@ -50,9 +50,9 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
         width: clamp(2.5rem, 1vw  + 0.5rem, 3rem);
         fill: var(--clr-tertiary);
         transition: fill 0.3s ease;
-
-        &:hover {fill: var(--clr-accent-1);}
     }
+
+    &:is(:hover, :focus) svg {fill: var(--clr-accent-1);}
 }
 
 .article-nav {
@@ -62,11 +62,12 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
     interpolate-size: allow-keywords;
     width: calc(100% - 4rem);
     height: 0;
+    visibility: hidden;
     border-radius: 1rem;
     box-shadow: var(--shadow);
-    transition: all 0.3s ease;
+    transition: height 0.3s ease, visibility 0.3s;
 
-    &[data-visible] {height: auto;}
+    &:is([data-visible], :focus-visible) {height: auto; visibility: visible;}
     
     ul {
         --_flow-space: 0.5rem;
@@ -85,7 +86,7 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
             color: var(--clr-primary);
             transition: color 0.3s ease;
 
-            &:hover {color: hsl(from var(--clr-accent-1) h s 30%);}
+            &:is(:hover, :focus) {color: hsl(from var(--clr-accent-1) h s 30%);}
         }
         
     }
