--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -22,7 +22,7 @@ import HeaderContent from "./HeaderContent.astro";
     height: 4.5rem;
     opacity: 1;
     box-shadow: var(--shadow);
-    background-color: hsl(from var(--clr-primary-surface) h s 5% / 0.8);
+    background-color: hsl(from var(--clr-primary-surface) h s l / 0.7);
     backdrop-filter: blur(10px);
 
     .wrapper {
