--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -1,8 +1,10 @@
 ---
 
+import { Image } from "astro:assets";
 import MainLayout from "../../../layouts/MainLayout.astro";
 import CommentForm from '../../../components/CommentForm.astro';
 import fetchArticles from "../../../lib/fetchArticles";
+import Article from "../../../images/articlepages-bg.jpg";
 import { formatCategoryName } from "../../../utils/utils";
 import { resolveImageURL } from "../../../utils/utils";
 
@@ -11,7 +13,7 @@ const { category, slug } = Astro.params;
 const articles =  await fetchArticles( {collection:"all-articles", categoryName: category, slug: slug} );
 const articleContent = articles[0];
 
-// Beuatifying category name for display on page
+// Beautifying category name for display on page
 const displayCategoryName = formatCategoryName(category);
 // Retrieving final image URL for display from fetched wix URL
 const finalImageURL =  resolveImageURL(articleContent.featuredImage);
@@ -25,39 +27,51 @@ Astro.response.headers.set(
 
 <MainLayout />
 
-<main class="wrapper">
+<main>
 
     <a href={`/articles/${category}`} class="breadcrumb">
         Back to {displayCategoryName}
     </a>
 
-    <div class="article flow">
+    <div class="article-hero">
+        <div class="hero-inner">
+            <div class="wrapper">
+            
+            <h1 class="article-title">{articleContent.title}</h1>
 
-        <h1 class="article-title">{articleContent.title}</h1>
+            <div class="author">
+                <img src="" class="author-img" />
+                <h3 class="author-title">The Secret Well-Wisher</h3>
+            </div>
 
-        <!-- Render image only if available -->
-        {finalImageURL ? (
-            <img src={finalImageURL} alt="Oops no image!" class="article-image" />
-        ) : (
-            null
-        )}
+            <!-- Render image only if available -->
+            {finalImageURL ? (
+                <img src={finalImageURL} alt="Oops no image!" class="article-image" />
+            ) : (
+                null
+            )}
 
+            </div>
+        </div>
+        <Image src={Article} alt="" class="hero-image" />
+    </div>
+
+    <div class="article wrapper">
         <div class="article-content flow" set:html={articleContent.content} />
-
+        <CommentForm articleSlug = {slug} />
     </div>
 
 
-    <CommentForm articleSlug = {slug} />
 
 </main>
 
 <style>
 
 body {
-    background-image: linear-gradient(hsl(from var(--clr-primary) h 50% 3% / 0.7)), url(../../../images/articlepages-bg.jpg);
+    /* background-image: linear-gradient(hsl(from var(--clr-primary) h 50% 3% / 0.7)), url(../../../images/articlepages-bg.jpg);
     background-size: cover;
     background-position: top;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
 }
 
 .breadcrumb {
@@ -85,13 +99,51 @@ body {
     &:is(:hover, :focus) {color: var(--clr-accent-1);}
 }
 
-.article {
-    --_flow-space: 3rem;
-    max-width: 60ch;
-    margin-inline: auto;
+.article-hero {
+    display: grid;
+    justify-items: center;
+    position: relative;
 
-    .article-title {
-        text-align: center;
+    .flow {--_flow-space: 1rem;}
+
+    .hero-inner {
+        backdrop-filter: blur(5px);
+        width: 100%;
+        height: 100%;
+        box-shadow: inset 0 -15rem var(--clr-primary);
+    }
+
+    .hero-image {
+        grid-column: 1/-1;
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0.4;
+    }
+    
+    .article-title {text-align: center; text-transform: uppercase;}
+    
+    .author {
+        margin-block: 0.5rem 4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        .author-img {
+            width: 3rem;
+            height: 3rem;
+            border-radius: 50%;
+            background-color: var(--clr-primary);
+        }
+        
+        .author-title {
+            font-size: 1rem;
+            letter-spacing: unset;
+            color: var(--clr-accent-2);
+        }
     }
 
     .article-image {
@@ -100,6 +152,11 @@ body {
         border-radius: 0.5rem;
         box-shadow: var(--shadow);
     }
+}
+
+.article {
+    max-width: 60ch;
+    padding-block-start: 0;
 
     .article-content {
         margin-inline: auto;
