--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,19 +46,19 @@ export const prerender = true;
         <h1 class="about-title">About this place</h1>
 
         <p>
-            Have you ever wondered why we are born on this planet at any point in your life? Why do we go through a daily routine from a young age? Apart from the tasks that satisfy our survival needs, how did we end doing all the other things?
+            Have you ever wondered why we are born on this planet at any point in your life? Why do we go through a daily routine from a young age? Apart from the tasks that satisfy our survival needs, how did we end up doing the other things?
         </p>
         <p>
-            If anything, whatever activities we perform today are the projections of the stories or dialogues that our mind has created by grouping the sensory data we have subconsciously imbibed from our surroundings since our little brain started to develop. The most powerful patterns are those which had all our five senses involved while observing. If the story in play was something unique or an extreme version of our likes and dislikes, they have the potential to create strong imprints directly in our subconscious mind. Yet, we wonder, “why am I doing this particular thing when I didn’t intend to do it in the first place?”. Don’t we all?
+            If anything, the activities we perform today are the projections of stories or dialogues that our mind has created by grouping sensory data we have subconsciously imbibed from our surroundings since our little brain started to develop. The most powerful patterns involved all our five senses while observing. If the story in play was something unique or an extreme version of our likes and dislikes, they have the potential to create strong imprints in our subconscious mind. Yet, we wonder <span class="thought">"why do I do this particular thing when I didn't intend to do it in the first place?"</span>. Don't we all?
         </p>
         <p>
-            When we marvel about how big the world is don’t we also get the sense that there is a whole bunch of things or aspects to life that’s out there but not very obvious to us. We get stuck in a rut trying to achieve something only to end up feeling unsatisfied. We exhaust ourselves constantly switching between things wondering, “Maybe this is it. This is that thing that I’ve been waiting to do my whole life”.
+            When we marvel about how big the world is don't we also get the sense that there are a lot of aspects to life that are out there but not very obvious to us. We get stuck in a rut trying to achieve something only to end up feeling unsatisfied. We exhaust ourselves constantly switching between things wondering, <span class="thought">"Maybe this is it. This is that thing that I've been waiting to do my whole life"</span>.
         </p>
         <p>
-            After a point, we start using the word “depth” to address how much we are willing to dive in to the very depth of all our doings, be it professional or personal to find that glowing satisfaction. And most often we connect this “depth” to words such as “loud”, “heavy”, “strong”, “grand”. What if the opposite added another dimension to the word “depth”? What if “subtle” held more “depth” than anything else? How do we experience the “subtle” with the “utmost depth”? Most often by cutting off the noise in every sense, be it inside your head or outside it. Confusing?
+            After a point, we start using the word 'depth' to address how much we are willing to dive deep into all our doings be it professional or personal, to find that glowing satisfaction. And most often we connect depth to words such as 'loud', 'heavy', 'strong' and 'grand'. What if the opposite added another dimension to the word? What if 'subtle' held more 'depth' than anything else? How do we experience the 'subtle' with depth? Most often by cutting off the noise in every sense, be it inside your head or outside it. Confusing? Here, we attempt to answer that very question along with exploring the tiny and subtler aspects of life with the utmost depth and a no-holds barred approach.
         </p>
         <p>
-            Here, we attempt to explore the tiny and subtler aspects of life with the utmost depth with a no-holds barred approach.
+            If you are interested in these topics, you can read some articles written by me available in the navigation.
         </p>
         
     </section>
@@ -144,6 +144,8 @@ export const prerender = true;
     max-width: 70ch;
 
     .about-title {text-align: center;}
+
+    .thought {font-style: italic; font-weight: 500; color: var(--clr-accent-2);}
 }
 
 </style>
