--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -103,6 +103,7 @@ body {
     display: grid;
     justify-items: center;
     position: relative;
+    background: linear-gradient(transparent 99%, var(--clr-primary) 0);
 
     .flow {--_flow-space: 1rem;}
 
