--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ export const prerender = true;
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Inconsolata:wdth,wght@150,200..900&family=Inter:opsz,wght@14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=BioRhyme:wght@200..800&family=Inconsolata:wdth,wght@150,200..900&family=Montaga&display=swap" rel="stylesheet">
     <title>The Wilderness Trails</title>
     <ClientRouter />
     <!-- @ts-ignore -->
@@ -58,7 +58,7 @@ export const prerender = true;
             After a point, we start using the word 'depth' to address how much we are willing to dive deep into all our doings be it professional or personal, to find that glowing satisfaction. And most often we connect depth to words such as 'loud', 'heavy', 'strong' and 'grand'. What if the opposite added another dimension to the word? What if 'subtle' held more 'depth' than anything else? How do we experience the 'subtle' with depth? Most often by cutting off the noise in every sense, be it inside your head or outside it. Confusing? Here, we attempt to answer that very question along with exploring the tiny and subtler aspects of life with the utmost depth and a no-holds barred approach.
         </p>
         <p>
-            If you are interested in these topics, you can read some articles written by me available in the navigation.
+            If you are interested in these topics, you can read my blogs available in the navigation.
         </p>
         
     </section>
@@ -87,7 +87,7 @@ export const prerender = true;
     border-radius: 100vw;
     border: 1px solid hsl(from var(--clr-font) h s l / 0.3);
     box-shadow: var(--shadow);
-    background-color: hsl(from var(--clr-primary-surface) h s 5% / 0.8);
+    background-color: hsl(from var(--clr-primary-surface) h s l / 0.7);
     backdrop-filter: blur(10px);
     animation: fade-in linear forwards;
     animation-timeline: view();
@@ -108,9 +108,9 @@ export const prerender = true;
 
     .hero-title {
         margin-top: -5rem;
-        font-size: 2.5rem;
-        font-weight: 300;
         font-family: "Inconsolata", monospace;
+        font-weight: 300;
+        font-size: 2.5rem;
         text-align: center;
         color: var(--clr-primary);
         animation: fade-out linear forwards;
