--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -82,7 +82,7 @@ body {
     z-index: 99;
     width: max-content;
     padding: 0.75rem 1.25rem;
-    font-family: monospace;
+    font-family: "Atma", system-ui;
     font-weight: 600;
     font-size: 1rem;
     text-decoration: none;
@@ -164,6 +164,7 @@ body {
 
         h4 {
             font-style: italic;
+            text-wrap: unset;
             opacity: 0;
             animation: fade-in ease forwards;
             animation-timeline: view();
