--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -14,7 +14,7 @@ import '../styles/global.css';
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=BioRhyme:wght@200..800&family=Inconsolata:wdth,wght@150,200..900&family=Montaga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Inconsolata:wdth,wght@150,200..900&family=Montaga&family=Sansita:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap" rel="stylesheet">
     <title>The Wilderness Trails</title>
     <ClientRouter />
     <!-- @ts-ignore -->
