--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ export const prerender = true;
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=BioRhyme:wght@200..800&family=Inconsolata:wdth,wght@150,200..900&family=Montaga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Inconsolata:wdth,wght@150,200..900&family=Montaga&family=Sansita:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap" rel="stylesheet">
     <title>The Wilderness Trails</title>
     <ClientRouter />
     <!-- @ts-ignore -->
@@ -43,7 +43,7 @@ export const prerender = true;
 
     <section class="about wrapper flow">
             
-        <h1 class="about-title">About this place</h1>
+        <h1 class="about-title">ABOUT THIS PLACE</h1>
 
         <p>
             Have you ever wondered why we are born on this planet at any point in your life? Why do we go through a daily routine from a young age? Apart from the tasks that satisfy our survival needs, how did we end up doing the other things?
@@ -143,7 +143,10 @@ export const prerender = true;
 .about {
     max-width: 70ch;
 
-    .about-title {text-align: center;}
+    .about-title {
+        font-family: "Sansita", sans-serif;
+        text-align: center;
+    }
 
     .thought {font-style: italic; font-weight: 500; color: var(--clr-accent-2);}
 }
