--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,8 +78,9 @@ body {
 :where(p, h1, h2, h3, h4) {overflow-wrap: break-word;}
 
 :where(h1, h2, h3, h4) {
-    font-family: "BioRhyme", serif;
+    font-family: "Sansita", sans-serif;
     line-height: 1.2;
+    letter-spacing: 1px;
     text-wrap: balance;
 }
 
@@ -90,13 +91,13 @@ h1 {
 }
 
 h2 {
-    font-size: clamp(1.7rem, 3vw + 0.5rem, 2.5rem);
+    font-size: clamp(2rem, 3vw + 0.5rem, 4rem);
     color: var(--clr-accent-2);
     font-weight: 700;
 }
 
 h3, h4 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     color: var(--clr-accent-2);
     font-weight: 600;
 }
